--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ matrix:
       script: make go-report-card-test
       env: GO_REPORT_CARD=true
     - stage: Test
+      if: type = push AND env(DOCKER_USERNAME) IS present
       script: make output-validation-test
       env: CFN_AND_TERRAFORM_OUTPUT_VALIDATION_TESTS=true
     - stage: Test
