--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ matrix:
       script: make output-validation-test
       env: CFN_AND_TERRAFORM_OUTPUT_VALIDATION_TESTS=true
     - stage: Test
-      if: type = push AND branch = master AND env(GITHUB_TOKEN) IS present
+      if: type = push AND env(GITHUB_TOKEN) IS present
       script: test/license-test/run-license-test.sh
       env: LICENSE_TEST=true
     - stage: Deploy
