--- a/.travis.yml
+++ b/.travis.yml
@@ -50,7 +50,7 @@ jobs:
       if: type = push AND tag =~ /^v\d+\.\d+(\.\d+)?(-\S*)?$/ AND env(DOCKERHUB_USERNAME) IS present
       script: make release
       name: Release Assets
-    - stage: Deploy
+    - stage: Sync to Homebrew
       if: type = push AND tag =~ /^v\d+\.\d+(\.\d+)?(-\S*)?$/ AND env(GITHUB_USERNAME) IS present
       script: make homebrew-sync
       name: Sync to AWS homebrew-tap
