--- a/.travis.yml
+++ b/.travis.yml
@@ -40,11 +40,11 @@ jobs:
       name: CFN/Terraform Output Validation Tests
     - stage: Test
       if: type = push AND env(GITHUB_TOKEN) IS present
-      script: test/license-test/run-license-test.sh
+      script: make license-test
       name: License Test
     - stage: Test
       if: type = push AND env(GITHUB_TOKEN) IS present
-      script: test/e2e/run-test
+      script: make e2e-test
       name: E2E Tests
     - stage: Deploy
       if: type = push AND env(DOCKERHUB_USERNAME) IS present
