--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -45,6 +45,15 @@ jobs:
     - name: Build Docker Images
       run: make build-docker-images
 
+    - name: Integration Tests
+      if: github.event_name == 'push'
+      run: make integ-test
+      env:
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        AWS_SESSION_TOKEN: ${{ secrets.AWS_SESSION_TOKEN }}
+        AWS_REGION: ${{ secrets.AWS_REGION }}
+
   release:
     name: Release
     runs-on: ubuntu-20.04
