--- a/test/go-report-card-test/Dockerfile
+++ b/test/go-report-card-test/Dockerfile
@@ -3,11 +3,11 @@ FROM public.ecr.aws/bitnami/golang:latest
 WORKDIR /app
 
 ARG GO111MODULE=auto
-RUN go get github.com/gojp/goreportcard
+RUN go install github.com/gojp/goreportcard@latest
 RUN cd $GOPATH/src/github.com/gojp/goreportcard && (make install || cd / && curl -L https://git.io/vp6lP | sh)
 
-RUN go get github.com/gojp/goreportcard/cmd/goreportcard-cli
+RUN go install github.com/gojp/goreportcard/cmd/goreportcard-cli@latest
 
-RUN go get -u golang.org/x/tools/cmd/goimports
+RUN go install golang.org/x/tools/cmd/goimports@latest
 
 CMD $GOPATH/bin/goreportcard-cli -v -t 90
