--- a/test/license-test/Dockerfile
+++ b/test/license-test/Dockerfile
@@ -4,6 +4,6 @@ WORKDIR /app
 
 COPY license-config.hcl .
 ARG GOPROXY="https://proxy.golang.org,direct"
-RUN GO111MODULE=on go get github.com/mitchellh/golicense
+RUN GO111MODULE=on go install github.com/mitchellh/golicense@latest
 
 CMD $GOPATH/bin/golicense 
