--- a/test/license-test/Dockerfile
+++ b/test/license-test/Dockerfile
@@ -1,4 +1,4 @@
-FROM public.ecr.aws/bitnami/golang:1.17
+FROM golang:1.16
 
 WORKDIR /app
 
@@ -6,4 +6,4 @@ COPY license-config.hcl .
 ARG GOPROXY="https://proxy.golang.org,direct"
 RUN GO111MODULE=on go install github.com/mitchellh/golicense@v0.2.0
 
-CMD $GOPATH/bin/golicense 
+CMD $GOPATH/bin/golicense
