--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -3,7 +3,6 @@ name: EC2 Instance Selector CI and Release
 on: [push, pull_request, workflow_dispatch]
 
 env:
-  DEFAULT_GO_VERSION: ^1.23
   GITHUB_USERNAME: ${{ secrets.EC2_BOT_GITHUB_USERNAME }}
   GITHUB_TOKEN: ${{ secrets.EC2_BOT_GITHUB_TOKEN }}
   DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
@@ -16,13 +15,15 @@ jobs:
     name: Build and Test
     runs-on: ubuntu-20.04
     steps:
-    - name: Set up Go 1.x
-      uses: actions/setup-go@v2
-      with:
-        go-version: ${{ env.DEFAULT_GO_VERSION }}
-
     - name: Check out code into the Go module directory
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
+
+    - name: Set up Go 1.x
+      uses: actions/setup-go@v5
+      with:
+        go-version-file: 'go.mod'
+        check-latest: true
+        cache-dependency-path: '**/go.sum'
 
     - name: Unit Tests
       run: make unit-test
@@ -57,13 +58,15 @@ jobs:
     needs: [buildAndTest]
     if: github.event_name == 'push' && contains(github.ref, 'refs/tags/')
     steps:
-    - name: Set up Go 1.x
-      uses: actions/setup-go@v2
-      with:
-        go-version: ${{ env.DEFAULT_GO_VERSION }}
-
     - name: Check out code into the Go module directory
-      uses: actions/checkout@v2
+      uses: actions/checkout@v4
+
+    - name: Set up Go 1.x
+      uses: actions/setup-go@v5
+      with:
+        go-version-file: 'go.mod'
+        check-latest: true
+        cache-dependency-path: '**/go.sum'
     
     - name: Release Assets
       run: make release
